QtQml: Do not poison the type registry with unfinished enums

If a composite type is not ready, yet, and we request its enums, we
should not cache the result. To facilitate this, deduplicate the
surrounding code and centralize the call to initEnums().

Fixes: QTBUG-120084
Change-Id: I8386a3b44010a39470e886e93c5c64bfedac0b95
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 9b87e051cdbe1c8507071e2834b069b808bc1e04)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>